<resources>
    <string name="app_name">ThetaPracticleTest</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBNaAQ6cTxcoyAsNOYWnRlrBO2A6gtqqBM</string>

    <string name="text_login_email">Email ID</string>
    <string name="text_login_password">Password</string>
    <string name="text_login">Login</string>
    <string name="text_logout">Logout</string>

    <string name="text_email_required">Email ID is required!</string>
    <string name="text_password_required">Password is required!</string>
    <string name="text_validation_email">Enter valid email!</string>
    <string name="text_validation_password">Enter valid password!</string>
    <string name="text_wrong_email_password">Wrong Email ID or Password!</string>
    <string name="title_activity_navigation_drawer">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_map">Map</string>
    <string name="menu_profile">Profile</string>

    <string name="home_second">Home Second</string>
    <string name="text_latitude">Latitude</string>
    <string name="text_longitude">Longitude</string>
    <string name="text_drop_pin">Drop Pin</string>
</resources>
