<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:name="com.google.android.gms.maps.SupportMapFragment"   />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_10">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="0.75">

            <EditText
                android:id="@+id/edittext_latitude"
                android:layout_width="fill_parent"
                android:inputType="numberDecimal|numberSigned"
                android:hint="@string/text_latitude"
                android:layout_height="@dimen/edittext_height"
                android:background="@drawable/edittext_background_blue"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:paddingLeft="@dimen/margin_10"
                android:layout_marginTop="@dimen/margin_20"/>

            <EditText
                android:id="@+id/edittext_longitude"
                android:layout_width="fill_parent"
                android:inputType="numberDecimal|numberSigned"
                android:hint="@string/text_longitude"
                android:layout_height="@dimen/edittext_height"
                android:background="@drawable/edittext_background_blue"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:paddingLeft="@dimen/margin_10"
                android:layout_marginTop="@dimen/margin_15"/>

        </LinearLayout>

        <Button
            android:id="@+id/buttonDropPin"
            android:layout_width="0dp"
            android:text="@string/text_drop_pin"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:foreground="?attr/selectableItemBackground"
            android:background="@drawable/button_background_dark_grey"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:layout_marginLeft="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_15"/>
    </LinearLayout>

</RelativeLayout>